# byte

./: .gitignore  ARCHITECTURE.md  AUDIT_STATUS.md  BUGS.md  Cargo.toml  DIRECTORY_SELECTION.md  FEATURES.md  IMPLEMENTATION_PLAN_EXECUTE_INTERACTIVE.md  LICENSE  NOTABLE.md  PROJECT.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TUI_STYLING_GUIDE.md  byte.toml  byte.toml.example
.byte/state/: build.json
docs/: NOTABLE.md
docs/architecture/: ARCHITECTURE.md
docs/audit/: AUDIT_REPORT.md  AUDIT_STATUS.md
docs/audit/reviews/: BYTE_TUI_Reports_GPT.md  TUI_DESIGN_PHILOSOPHY.md
docs/guides/: CARGO_GUIDE.md
docs/planning/: BUGS.md  FEATURE_REQUESTS.md  IMPLEMENTATION_PLAN_EXECUTE_INTERACTIVE.md  KEYBINDINGS.md  PATH_VALIDATION_PLAN.md  ROADMAP.md  WORKSPACE_MANAGER_TEST_PLAN.md
src/: lib.rs  log.rs  logger.rs  main.rs  projects.rs
src/cli/: mod.rs
src/config/: mod.rs  types.rs
src/exec/: mod.rs
src/forms/: mod.rs
src/fs/: mod.rs
src/path/: mod.rs
src/state/: build.rs  git.rs  mod.rs
src/tui/: mod.rs
