[package]
name = "byte"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.41", features = ["full"] }
walkdir = "2.5"
anyhow = "1.0"
miette = { version = "7.4", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libloading = "0.8"
lazy_static = "1.5"
shellexpand = "3"
atty = "0.2"
dirs = "5.0"
skim = "0.15"
